# MLP-cuda

./: .gitignore  CMakeLists.txt  DEBUGGING_GUIDE.md  DEBUGGING_QUICKSTART.md  DEBUGGING_SYSTEMS_README.md  DIAGNOSTICS_INTEGRATION_GUIDE.md  DIAGNOSTIC_ANALYSIS.md  GRADIENT_BUG_ANALYSIS.md  GRADIENT_FIXES.md  GRADIENT_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LOSS_GRADIENT_ANALYSIS.md  README.md  build_diagnostics_test.sh
docs/: attention_design.md  cuda_implementation_plan.md  mathematical_derivation.md
examples/: analyze_vocab.cpp  attention_demo.cu  train_regression.cu  train_transformer.cu  train_transformer_impl.h  transformer_demo.cu
include/: activations.h  adam.h  attention_ops.h  debug_monitor.h  diagnostics.h  gradient_check.h  gradient_utils.h  loss.h  matrix_ops.h  mlp.h  multi_head_attention.h  precision_analysis.h  text_dataset.h  tokenizer.h  training_diagnostics.h  transformer.h  transformer_block.h  transformer_layers.h  wandb_logger.h  word_tokenizer.h
scripts/: wandb_logger.py
src/: activations.cu  adam.cu  attention_ops.cu  debug_monitor.cu  diagnostics.cu  gradient_check.cu  gradient_utils.cu  loss.cu  loss_gradient_old.cu  matrix_ops.cu  mlp.cu  multi_head_attention.cu  text_dataset.cpp  tokenizer.cpp  training_diagnostics.cpp  transformer.cu  transformer_block.cu  transformer_layers.cu  word_tokenizer.cpp
tests/: pytorch_reference.py  test_attention.cu  test_diagnostics.cpp  test_eos_handling.cpp  test_ffn_gradients.cu  test_loss_gradient.cu  test_matrix_ops.cu  test_mlp.cu  test_toy_problems.cu
